force-app/main/default/objects/Payment_Allocation__c/fields/Allocate_to__c.field-meta.xml
<CustomField>
    <fullName>Allocate_to__c</fullName>
    <label>Allocate to</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>Payment Allocation</relationshipLabel>
    <relationshipName>Payment_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>