force-app/main/default/objects/Payment_Allocation__c/fields/AllocatetoPR__c.field-meta.xml
<CustomField>
    <fullName>AllocatetoPR__c</fullName>
    <label>Allocate to PR</label>
    <referenceTo>Connectbill__c</referenceTo>
    <relationshipLabel>Payment Allocation</relationshipLabel>
    <relationshipName>Payment_Allocation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>