force-app/main/default/objects/Payment_Allocation__c/fields/Amountvnd__c.field-meta.xml
<CustomField>
    <fullName>Amountvnd__c</fullName>
    <label>Amount VND</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>