force-app/main/default/objects/Payment_Allocation__c/fields/Payment_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Payment_Voucher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Voucher</label>
    <referenceTo>Payment_Voucher__c</referenceTo>
    <relationshipLabel>Payment Allocation</relationshipLabel>
    <relationshipName>Payment_Allocation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>